# PostBoy

./: .gitignore  POSTMAN-GAP.md  README.md  deploy.mjs  nginx.conf
.cursor/plans/: tauri_migration_plan_44380ab8.plan.md
.cursor/rules/: DEVELOPMENT_GUIDE.md
.github/workflows/: release.yml
PostBoy/: DEVELOPMENT_GUIDE.md
PostBoy/PostBoy/: .gitignore  BUILDING.md  BUILD_INSTRUCTIONS.md  FEATURES.md  HOW_TO_RUN_TESTS.md  README.md  TECH_SHEET.md  package.json  svelte.config.js  test-apis-collection.json
PostBoy/PostBoy/docs/: variables.md
PostBoy/PostBoy/scripts/: tauri-env.cjs
PostBoy/PostBoy/src/: app.css  app.html  modules.d.ts
PostBoy/PostBoy/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
PostBoy/PostBoy/src-tauri/icons/: icon.icns
PostBoy/PostBoy/src-tauri/resources/: models.json
PostBoy/PostBoy/src-tauri/src/: grpc_client.rs  http_client.rs  lib.rs  load_probe.rs  native_http.rs  net_client.rs  sql_client.rs  sse_client.rs  ws_client.rs
PostBoy/PostBoy/src-tauri/src/ai/: commands.rs  engine.rs  mod.rs  model.rs  tool_parser.rs  tools.rs
PostBoy/PostBoy/src-tauri/src/ai/mcp/: mod.rs
PostBoy/PostBoy/src-tauri/src/commands/: mod.rs
PostBoy/PostBoy/src-tauri/src/database/: mod.rs
PostBoy/PostBoy/src/lib/api/: tauri.test.ts  tauri.ts
PostBoy/PostBoy/src/lib/auth/: authResolver.test.ts  authResolver.ts  digest.ts  md5.ts  oauth2.ts  tabAuth.ts
PostBoy/PostBoy/src/lib/components/: AppFooter.svelte  BinaryPreview.svelte  ChatbotPanel.svelte  CollectionsSidebar.svelte  CookieJarPanel.svelte  DiagnosticsPanel.svelte  DiffTool.svelte  EncoderPanel.svelte  EnvironmentSwitcher.svelte  EnvironmentsPanel.svelte  GlobalsPanel.svelte  HistorySidebar.svelte  JsonEditor.svelte  JsonGraphViewer.svelte  JsonTreeViewer.svelte  JwtDecoderPanel.svelte  KeyboardShortcuts.svelte  LeftSidebar.svelte  LoadTestScreen.svelte  McpServersPanel.svelte  MethodSelect.svelte  Modal.svelte  RequestAuthPanel.svelte  RequestBuilder.svelte  RequestChainPanel.svelte  RequestScriptsPanel.svelte  ResponseDiff.svelte  ResponsePanel.svelte  ResponseSearchBar.svelte  ResponseViewer.svelte  ScriptEditor.svelte  SearchPicker.svelte  SensitiveValuePopover.svelte  SettingsPanel.svelte  SqlRunnerPanel.svelte  SsePanel.svelte  TabBar.svelte  ToolsNavBar.svelte  VariableInput.svelte  WebSocketPanel.svelte
PostBoy/PostBoy/src/lib/stores/: appState.test.ts  appState.ts  chatbotStore.ts  consoleStore.ts  cookieStore.ts  environmentStore.ts  globalVariableStore.test.ts  globalVariableStore.ts  loadTestStore.ts  settingsStore.ts  sseStore.ts  tabStore.ts  uiStore.ts  variableStore.test.ts  variableStore.ts  wsStore.ts
PostBoy/PostBoy/src/lib/test/: api-collection.test.ts  codeGenAndScripts.test.ts  database-schema.test.ts  diagnostics.test.ts  diffTool.test.ts  historyFilters.test.ts  import-export.test.ts  jsonRawLines.test.ts  keyboard-shortcuts.test.ts  platform.test.ts  secretAndDynamicVariables.test.ts  sensitiveData.test.ts  setup.ts  (+8 more)
PostBoy/PostBoy/src/routes/: +page.svelte
PostBoy/PostBoy/static/: app.css  splashscreen.html
Ripple/: BUILDING.md  BUILD_INSTRUCTIONS.md  FEATURES.md  HOW_TO_RUN_TESTS.md  README.md  TECH_SHEET.md  vitest.config.js
Ripple/docs/: cloudflare-backend.md  scripts.md  variables.md
Ripple/scripts/: tauri-env.cjs
Ripple/src/: app.html  modules.d.ts
Ripple/src-tauri/: Cargo.toml
Ripple/src-tauri/capabilities/: default.json
Ripple/src-tauri/icons/: icon.icns
Ripple/src-tauri/resources/: models.json
Ripple/src-tauri/src/: lib.rs  load_test.rs  ws_client.rs
Ripple/src-tauri/src/ai/: commands.rs  engine.rs  model.rs  tool_parser.rs  tools.rs
Ripple/src-tauri/src/ai/mcp/: client.rs  commands.rs  config.rs  db.rs  oauth.rs  secrets.rs
Ripple/src-tauri/src/commands/: mod.rs
Ripple/src-tauri/src/database/: mod.rs
Ripple/src/lib/api/: tauri.ts
Ripple/src/lib/auth/: authResolver.test.ts  authResolver.ts  awsSigV4.ts  hawk.ts  types.ts
Ripple/src/lib/components/: AppFooter.svelte  ChatbotScreen.svelte  CollectionsSidebar.svelte  DiagnosticsPanel.svelte  DiffTool.svelte  EnvironmentSwitcher.svelte  EnvironmentsPanel.svelte  GlobalsPanel.svelte  GrpcPanel.svelte  HistorySidebar.svelte  JsonEditor.svelte  JsonGraphViewer.svelte  LoadTestScreen.svelte  MethodSelect.svelte  Modal.svelte  RequestAuthPanel.svelte  RequestChainPanel.svelte  RequestScriptsPanel.svelte  ResponseDiff.svelte  ScriptEditor.svelte  SearchPicker.svelte  SensitiveFieldActions.svelte  SettingsPanel.svelte  TabBar.svelte  ToolsNavBar.svelte  WebSocketPanel.svelte
Ripple/src/lib/stores/: chatbotStore.ts  environmentStore.ts  globalVariableStore.test.ts  loadTestStore.ts  mcpStore.ts  settingsStore.ts  sseStore.ts  tabStore.test.ts  tabStore.ts  variableStore.test.ts  variableStore.ts
Ripple/src/lib/test/: chainCodeGenerator.test.ts  database-schema.test.ts  harImportWorkflow.test.ts  harImporter.test.ts  jsonRawLines.test.ts  openapi-import.test.ts  platform.test.ts  pmExpect.test.ts  requestChain.test.ts  requestExamples.test.ts  sensitiveData.test.ts  sql-runner.test.ts  streamChainRunner.test.ts  streamConfig.test.ts  ui-components.test.ts  websocket.test.ts
Ripple/src/lib/utils/: chainCodeGenerator.ts  chainEnvironmentPicker.test.ts  chainEnvironmentPicker.ts  chainRunner.test.ts  chainRunner.ts  codeGenAuth.ts  codeGenerator.ts  collectionExporter.test.ts  collectionExporter.ts  collectionFilters.ts  collectionImporter.test.ts  diffEngine.ts  dynamicVariables.ts  editEscape.test.ts  editEscape.ts  encodingUtils.ts  environmentImporter.test.ts  environmentImporter.ts  harImporter.ts  historyFilters.ts  loadTestAI.ts  loadTestProbe.ts  loadTestReport.ts  monacoTheme.ts  requestExamples.ts  requestScriptRunner.ts  scriptVariables.ts  sensitiveData.ts  streamConfig.ts  streamHistory.ts  tabBodyContentSync.test.ts  theme.ts  variableAutocomplete.ts  variableHoverPreview.ts
Ripple/src/routes/: +page.svelte
Ripple/static/: collapsed-sidebar.css  splashscreen.html
docs/superpowers/specs/: 2026-06-14-secret-dynamic-variables-design.md
scripts/: release.js
(+30 files in other folders)
