[package]
name = "postboy"
version = "0.0.16"
description = "A minimal PostBoy built with Tauri for API testing"
authors = ["Gaurav Saroha (Moody's)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "postboy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["chatbot"]
chatbot = ["dep:llama-cpp-2", "dep:sha2", "dep:num_cpus", "dep:encoding_rs"]

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
tokio-util = "0.7"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"] }
uuid = { version = "1", features = ["v4"] }
lazy_static = "1"
base64 = "0.22"
url = "2"
hickory-resolver = "0.25"
surge-ping = "0.8"

# Optional dependencies for the `chatbot` feature.
# When the feature is disabled (`--no-default-features`), none of these are compiled,
# which means no C++/cmake toolchain is needed to build PostBoy without the chatbot.
sha2 = { version = "0.10", optional = true }
num_cpus = { version = "1", optional = true }
encoding_rs = { version = "0.8", optional = true }

# llama-cpp-2 with platform-appropriate GPU backend baked in:
#   - macOS  → Metal (no extra build deps; Metal ships with the OS)
#   - others → Vulkan (universal across NVIDIA/AMD/Intel; requires the
#     Vulkan SDK to be installed at build time:
#     https://vulkan.lunarg.com/sdk/home)
# At runtime, llama.cpp probes for a usable device and falls back to CPU
# automatically if no GPU/driver is found, so users with no GPU still work.
[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "0.1", optional = true, default-features = false, features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-2 = { version = "0.1", optional = true, default-features = false, features = ["vulkan"] }

